# augment-to-copilot-metrics

./: .env.example  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  FIELD_MAPPING.md  IMPLEMENTATION_PLAN.md  OLD_VS_NEW_COMPARISON.md
scripts/: verify_field_mappings.py
src/augment_metrics/: __init__.py  __main__.py  analytics_client.py  cli.py  config.py  http.py  token_auth.py  transformer.py
tests/: __init__.py  test_analytics_client.py  test_api_contracts.py  test_cli.py  test_config.py  test_field_mapping_verification.py  test_http.py  test_integration.py  test_main.py  test_token_auth.py  test_transformer.py
